--- a/ExpensesApp/ExpensesApp/Views/ExpensesPage.xaml
+++ b/ExpensesApp/ExpensesApp/Views/ExpensesPage.xaml
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:ExpensesApp.ViewModels"
              x:Class="ExpensesApp.Views.ExpensesPage">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <vm:ExpenseVM x:Key="vm"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.ToolbarItems>
-        <ToolbarItem IconImageSource="add.png"/>
+        <ToolbarItem IconImageSource="add.png"
+                     Command="{Binding Source={StaticResource vm},Path=AddExpenseCommand}"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <ListView>
