--- a/ExpensesApp/ExpensesApp/Views/NewExpensePage.xaml
+++ b/ExpensesApp/ExpensesApp/Views/NewExpensePage.xaml
@@ -5,25 +5,52 @@
              x:Class="ExpensesApp.Views.NewExpensePage">
     <ContentPage.Resources>
         <ResourceDictionary>
-            <vm:NewExpenseVM x:Key="vm"/>
+            <vm:NewExpenseVM x:Key="vm" />
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Save"
-                     Command="{Binding Source={StaticResource vm},Path=SaveExpenseCommand}"/>
+                     Command="{Binding Source={StaticResource vm},Path=SaveExpenseCommand}" />
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout Margin="16" BindingContext="{Binding Source={StaticResource vm}}">
-            <Entry Placeholder="Expense name"
-                   Text="{Binding ExpenseName, Mode=TwoWay}"/>
-            <Entry Placeholder="Ammount"
-                   Keyboard="Numeric"
-                   Text="{Binding ExpenseAmmount,Mode=TwoWay}"/>
-            <Entry Placeholder="Short description"
-                   Text="{Binding ExpenseDescription}"/>
-            <DatePicker Date="{Binding ExpenseDate, Mode=TwoWay}"/>
-            <Picker SelectedItem="{Binding ExpenseCategory, Mode=TwoWay}"
-                    ItemsSource="{Binding Categories}"/>
+        <StackLayout BindingContext="{Binding Source={StaticResource vm}}">
+            <TableView x:Name="expenseTableView">
+                <TableRoot>
+                    <TableSection>
+                        <EntryCell Label="Name:"
+                                   Placeholder="Expense name"
+                                   Text="{Binding ExpenseName, Mode=TwoWay}" />
+                        <EntryCell Label="Ammount:"
+                                   Placeholder="Ammount"
+                                   Text="{Binding ExpenseAmmount,Mode=TwoWay}" />
+                        <EntryCell Label="Description:"
+                                   Placeholder="Short description"
+                                   Text="{Binding ExpenseDescription}" />
+                        <ViewCell>
+                            <StackLayout Orientation="Horizontal"
+                                         Margin="16,0">
+                                <Label Text="Date:"
+                                       VerticalOptions="Center" />
+                                <DatePicker Date="{Binding ExpenseDate, Mode=TwoWay}"
+                                            VerticalOptions="Center"
+                                            HorizontalOptions="FillAndExpand" />
+
+                            </StackLayout>
+                        </ViewCell>
+                        <ViewCell>
+                            <StackLayout Orientation="Horizontal"
+                                         Margin="16,0">
+                                <Label Text="Category:"
+                                       VerticalOptions="Center" />
+                                <Picker SelectedItem="{Binding ExpenseCategory, Mode=TwoWay}"
+                                        ItemsSource="{Binding Categories}"
+                                        VerticalOptions="Center"
+                                        HorizontalOptions="FillAndExpand" />
+                            </StackLayout>
+                        </ViewCell>
+                    </TableSection>
+                </TableRoot>
+            </TableView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
