--- a/ExpensesApp/ExpensesApp/Views/NewExpensePage.xaml
+++ b/ExpensesApp/ExpensesApp/Views/NewExpensePage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:ExpensesApp.ViewModels"
+             xmlns:effects="clr-namespace:ExpensesApp.Effects"
              x:Class="ExpensesApp.Views.NewExpensePage">
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -33,7 +34,11 @@
                                        VerticalOptions="Center" />
                                 <DatePicker Date="{Binding ExpenseDate, Mode=TwoWay}"
                                             VerticalOptions="Center"
-                                            HorizontalOptions="FillAndExpand" />
+                                            HorizontalOptions="FillAndExpand">
+                                    <DatePicker.Effects>
+                                        <effects:SelectedEffect />
+                                    </DatePicker.Effects>
+                                </DatePicker>
 
                             </StackLayout>
                         </ViewCell>
@@ -45,7 +50,11 @@
                                 <Picker SelectedItem="{Binding ExpenseCategory, Mode=TwoWay}"
                                         ItemsSource="{Binding Categories}"
                                         VerticalOptions="Center"
-                                        HorizontalOptions="FillAndExpand" />
+                                        HorizontalOptions="FillAndExpand">
+                                    <Picker.Effects>
+                                        <effects:SelectedEffect />
+                                    </Picker.Effects>
+                                </Picker>
                             </StackLayout>
                         </ViewCell>
                     </TableSection>
